[gd_scene load_steps=7 format=3 uid="uid://c7hgx3j3lulo5"]

[ext_resource type="Script" uid="uid://c11tieqaph8rn" path="res://Scripts/UI/PermanentUpgradesMenu/permanent_upgrades_menu.gd" id="1_eqnm8"]
[ext_resource type="Texture2D" uid="uid://nfjd1wonq2h2" path="res://Textures/Crafting/crafting_background.png" id="2_0pqiu"]
[ext_resource type="Texture2D" uid="uid://cavse8ld5bby8" path="res://Textures/Crafting/crafting_slot_selected.png" id="3_vgxu8"]
[ext_resource type="Texture2D" uid="uid://bxbcn11k4i3i2" path="res://Textures/soul.png" id="4_eqnm8"]
[ext_resource type="PackedScene" uid="uid://3506da8rupwo" path="res://Scenes/UI/PermanentUpgradesMenu/double_jump_slot.tscn" id="4_pml07"]
[ext_resource type="PackedScene" uid="uid://df8jfu4ipoemc" path="res://Scenes/UI/PermanentUpgradesMenu/max_hp_slot.tscn" id="5_ch2ra"]

[node name="PermanentUpgradesMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_eqnm8")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(400, 270)
scale = Vector2(10, 6)
texture = ExtResource("2_0pqiu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(400, 45)
scale = Vector2(10, 3)
texture = ExtResource("3_vgxu8")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(400, 495)
scale = Vector2(10, 3)
texture = ExtResource("3_vgxu8")

[node name="UpgradesLabel" type="Label" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 317.0
offset_top = 17.0
offset_right = 502.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 40
text = "Upgrades"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 78.0
offset_right = 780.0
offset_bottom = 462.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 132

[node name="DoubleJumpSlot" parent="ScrollContainer/VBoxContainer" instance=ExtResource("4_pml07")]
layout_mode = 2

[node name="MaxHpSlot" parent="ScrollContainer/VBoxContainer" instance=ExtResource("5_ch2ra")]
layout_mode = 2

[node name="SoulsAmount" type="Label" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 25.0
offset_right = 752.0
offset_bottom = 66.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoulsSprite" type="Sprite2D" parent="."]
position = Vector2(638, 46)
scale = Vector2(1.0625, 1.09375)
texture = ExtResource("4_eqnm8")

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 465.0
offset_top = 473.0
offset_right = 667.0
offset_bottom = 520.0
theme_override_font_sizes/font_size = 28
text = "Exit"

[node name="UpgradeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 473.0
offset_right = 357.0
offset_bottom = 520.0
theme_override_font_sizes/font_size = 28
disabled = true
text = "Upgrade"

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="UpgradeButton" to="." method="_on_upgrade_button_pressed"]
